--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "format": "prettier --write \"**/*.{js,mjs,ts,mts,d.ts,html}\" --cache",
     "test": "ng test",
+    "lint": "ng lint",
+    "lint:fix": "ng test",
     "serve:ssr:ahorrar": "node dist/ahorrar/server/server.mjs"
   },
   "private": true,
@@ -40,8 +42,9 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "angular-eslint": "19.3.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.14.0",
+    "eslint": "^9.23.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
@@ -55,6 +58,7 @@
     "postcss": "^8.4.49",
     "prettier": "^3.0.0",
     "tailwindcss": "^3.4.17",
-    "typescript": "~5.6.2"
+    "typescript": "~5.6.2",
+    "typescript-eslint": "8.27.0"
   }
 }
