--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,8 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# environment
+src/environments/*
+!src/environments/environment.model.ts
+!src/environments/environment.ts
