--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "target": "ES2022",
     "module": "ES2022",
     "paths": {
+      "@settings/*": ["./src/app/configuration/*"],
       "@env": ["./src/environments/environment.ts"],
     }
   },
