added packages and styles

--- a/.gitignore
+++ b/.gitignore
@@ -44,5 +44,6 @@ Thumbs.db
 
 # environment
 src/environments/*
+!src/environments/environment.provider.ts
 !src/environments/environment.model.ts
 !src/environments/environment.ts
