--- a/package.json
+++ b/package.json
@@ -14,51 +14,49 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.2.4",
-    "@angular/common": "^19.2.4",
-    "@angular/compiler": "^19.2.4",
-    "@angular/core": "^19.2.4",
-    "@angular/forms": "^19.2.4",
-    "@angular/platform-browser": "^19.2.4",
-    "@angular/platform-browser-dynamic": "^19.2.4",
-    "@angular/platform-server": "^19.2.4",
-    "@angular/router": "^19.2.4",
-    "@angular/ssr": "^19.2.4",
-    "@primeng/themes": "^19.0.10",
-    "chart.js": "4.4.2",
-    "express": "^4.18.2",
-    "primeclt": "^0.1.5",
-    "primeicons": "^7.0.0",
-    "primeng": "^19.0.10",
+    "@angular/animations": "^20.0.3",
+    "@angular/cdk": "^20.1.4",
+    "@angular/common": "^20.0.3",
+    "@angular/compiler": "^20.0.3",
+    "@angular/core": "^20.0.3",
+    "@angular/forms": "^20.1.4",
+    "@angular/material": "^20.1.4",
+    "@angular/platform-browser": "^20.0.3",
+    "@angular/platform-browser-dynamic": "^20.1.4",
+    "@angular/platform-server": "^20.1.4",
+    "@angular/router": "^20.1.4",
+    "@angular/ssr": "^20.1.4",
+    "@ngrx/signals": "^20.0.0",
+    "@supabase/supabase-js": "^2.53.0",
+    "@tailwindcss/postcss": "^4.1.11",
+    "express": "^4.21.2",
+    "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
-    "tailwindcss-primeui": "^0.5.1",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "tailwindcss": "^4.1.11",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.4",
-    "@angular/cli": "^19.2.4",
-    "@angular/compiler-cli": "^19.2.4",
-    "@types/express": "^4.17.17",
+    "@angular/build": "^20.1.4",
+    "@angular/cli": "^20.1.4",
+    "@angular/compiler-cli": "^20.1.4",
+    "@types/express": "^4.17.23",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
+    "@types/node": "^18.19.121",
     "angular-eslint": "19.3.0",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.23.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.31.0",
+    "eslint": "^9.32.0",
+    "eslint-config-prettier": "^9.1.2",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^4.2.5",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "postcss": "^8.4.49",
-    "prettier": "^3.0.0",
-    "tailwindcss": "^3.4.17",
-    "typescript": "~5.6.2",
+    "netlify": "^23.0.0",
+    "prettier": "^3.6.2",
+    "typescript": "~5.8.3",
     "typescript-eslint": "8.27.0"
   }
 }
