--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,8 @@
     "target": "ES2022",
     "module": "ES2022",
     "paths": {
-      "@settings/*": ["./src/app/configuration/*"],
-      "@env": ["./src/environments/environment.ts"],
+      "@env": ["./src/environments/environment.provider.ts"],
+      "@*": ["./src/app/modules/*"],
     }
   },
   "angularCompilerOptions": {
