--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@angular/build": "^20.1.4",
     "@angular/cli": "^20.1.4",
     "@angular/compiler-cli": "^20.1.4",
+    "@netlify/angular-runtime": "^2.4.0",
     "@types/express": "^4.17.23",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.19.121",
