--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,8 @@
 [build]
 command = "npm run build"
 publish = "dist/ahorrar/browser"
+
+[[redirects]]
+  from = "/*"
+  status = 200
+  to = "/index.html"
