fixed json syntax

--- a/angular.json
+++ b/angular.json
@@ -55,7 +55,7 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.scss"],
+            "styles": ["src/styles.scss"]
           },
           "configurations": {
             "production": {
@@ -113,7 +113,7 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.scss"],
+            "styles": ["src/styles.scss"]
           }
         },
         "lint": {
