--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,10 @@
+[build]
+  command="npm run build"
+  ignore="exit 1" ## always build, there might be changes in the plugin
+
+[[plugins]]
+  package="@netlify/angular-runtime"
+
 [[redirects]]
   from = "/*"
   status = 200
