--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "format": "prettier --write \"**/*.{js,mjs,ts,mts,d.ts,html}\" --cache",
     "test": "ng test",
     "lint": "ng lint",
-    "lint:fix": "ng test"
+    "lint:fix": "ng test",
+    "serve:ssr:ahorrar": "node dist/ahorrar/server/server.mjs"
   },
   "private": true,
   "dependencies": {
@@ -22,10 +23,13 @@
     "@angular/material": "^20.1.5",
     "@angular/platform-browser": "^20.0.3",
     "@angular/platform-browser-dynamic": "^20.1.6",
+    "@angular/platform-server": "^20.0.3",
     "@angular/router": "^20.1.6",
+    "@angular/ssr": "^20.1.6",
     "@ngrx/signals": "^20.0.0",
     "@supabase/supabase-js": "^2.55.0",
     "@tailwindcss/postcss": "^4.1.11",
+    "express": "^5.1.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.11",
@@ -36,7 +40,9 @@
     "@angular/cli": "^20.1.6",
     "@angular/compiler-cli": "^20.1.6",
     "@netlify/angular-runtime": "^2.4.0",
+    "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^20.17.19",
     "angular-eslint": "19.3.0",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^9.1.2",
