--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   command="npm run build"
-  ignore="exit 1" ## always build, there might be changes in the plugin
+  publish = "dist/ahorrar/browser"
 
 [[plugins]]
   package="@netlify/angular-runtime"
