--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-server": "^20.0.3",
     "@angular/router": "^20.1.6",
     "@angular/ssr": "^20.1.6",
+    "@netlify/edge-functions": "^2.17.0",
     "@ngrx/signals": "^20.0.0",
     "@supabase/supabase-js": "^2.55.0",
     "@tailwindcss/postcss": "^4.1.11",
